kubernetes/dev/candidates_backend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: candidates-backend
    labels:
        app: candidates-backend
    namespace: flask-starter
spec:
    replicas: 1
    selector:
        matchLabels:
            app: candidates-backend
    template:
        metadata:
            labels:
                app: candidates-backend
        spec:
            containers:
                - name: candidates-backend-service
                  image: 424423231904.dkr.ecr.us-east-1.amazonaws.com/candidates_backend:dev
                  imagePullPolicy: Always
                  ports:
                     - containerPort: 8000
                - name: candidates-backend-db
                  image: 424423231904.dkr.ecr.us-east-1.amazonaws.com/candidates_backend_db:dev
                  imagePullPolicy: Always
